Création d'une maquette graphique pour la gestion des groupes

--- a/views/group/index.ejs
+++ b/views/group/index.ejs
@@ -1,1 +1,238 @@
-toast
+<h1 class="center-align">Gestion de mes groupes</h1>
+
+<!--
+<div class="container">
+    <div class="row">
+        <div class="col col-md-6">
+            <ul class="collection with-header collection-groups">
+
+                <li class="collection-header center-align">
+                    <h4>Mes groupes</h4>
+                    <a class="btn-floating btn-large waves-effect waves-light pink"><i
+                                class="material-icons">group_add</i></a>
+                </li>
+                <li class="collection-item collection-group waves-effect">
+                    <div>Alvin</div>
+                </li>
+
+                <li class="collection-item collection-group waves-effect">
+                    <div>Alvin</div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col col-md-6">
+            <ul class="collection with-header collection-groups">
+                <li class="collection-header center-align">
+                    <h4>Membres du groupe</h4>
+                    <a class="btn-floating btn-large waves-effect waves-light pink"><i
+                                class="material-icons">person_add</i></a>
+                </li>
+                <li class="collection-item user">
+                    <img src="images/default/h.png" alt="HA" class="avatar circle">
+                    <span class="name">Hugo Alliaume</span>
+                    <span class="actions">
+                        <a href="#!" title="Enlever les droits de gestion">
+                            <i class="material-icons">star</i>
+                        </a>
+                        <a href="#!" title="Enlever du groupe">
+                            <i class="material-icons">close</i>
+                        </a>
+                    </span>
+                </li>
+                <li class="collection-item user">
+                    <img src="images/default/h.png" alt="HA" class="avatar circle">
+                    <span class="name">Hugo Alliaume</span>
+                    <span class="actions">
+                        <a href="#!" class="secondary-content" title="Assigner les droits de gestion"><i class="material-icons">star_border</i></a>
+                        <a href="#!" class="secondary-content" title="Enlever du groupe"><i class="material-icons">close</i></a>
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col col-md-6">
+            <ul class="collection with-header collection-groups">
+                <li class="collection-header center-align"><h4>J'appartiens à :</h4></li>
+                <li class="collection-item active">
+                    <div>Group 1<a href="#!" class="secondary-content"><i class="blue-text material-icons">send</i></a>
+                    </div>
+                </li>
+                <li class="collection-item">
+                    <div>Group 1<a href="#!" class="secondary-content"><i class="blue-text material-icons">send</i></a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col col-md-6">
+            <ul class="collection with-header">
+                <li class="collection-header center-align"><h4>Membres du groupe</h4></li>
+                <li class="collection-item user">
+                    <img src="images/default/h.png" alt="HA" class="avatar circle">
+                    <span class="name">Hugo Alliaume</span>
+                    <span class="actions">
+                        <a href="#!" class="secondary-content" title="Enlever les droits de gestion"><i class="material-icons">star</i></a>
+                        <a href="#!" class="secondary-content" title="Enlever du groupe"><i class="material-icons">close</i></a>
+                    </span>
+                </li>
+                <li class="collection-item user">
+                    <img src="images/default/h.png" alt="HA" class="avatar circle">
+                    <span class="name">Hugo Alliaume</span>
+                    <span class="actions">
+                        <a href="#!" class="secondary-content" title="Assigner les droits de gestion"><i class="material-icons">star_border</i></a>
+                        <a href="#!" class="secondary-content" title="Enlever du groupe"><i class="material-icons">close</i></a>
+                    </span>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+-->
+
+<div class="container groups-gestion">
+
+    <div class="row">
+        <div class="col col-xs-12 col-sm-6">
+            <ul class="collection with-header collection-groups">
+                <li class="collection-header center-align">
+                    <h4>Mes groupes</h4>
+                    <a href="" class="btn-floating btn-large btn-flat waves-effect pink"><i class="material-icons">group_add</i></a>
+                </li>
+                <li class="collection-item collection-group active waves-effect">
+                    <div>Item #1 <i class="material-icons right">keyboard_arrow_right</i></div>
+                </li>
+                <li class="collection-item collection-group waves-effect">
+                    <div>Item #2 <i class="material-icons right">keyboard_arrow_right</i></div>
+                </li>
+                <li class="collection-item collection-group waves-effect">
+                    <div>Item #3 <i class="material-icons right">keyboard_arrow_right</i></div>
+                </li>
+            </ul>
+        </div>
+        <div class="col col-xs-12 col-sm-6">
+            <ul class="collection with-header collection-users">
+                <li class="collection-header center-align">
+                    <h4>Membres</h4>
+                    <a href="" class="btn-floating btn-large btn-flat waves-effect pink"><i class="material-icons">person_add</i></a>
+                </li>
+                <li class="collection-item collection-user user">
+                    <img src="images/default/h.png" class="avatar" alt="AH">
+                    <span class="name">Hugo Alliaume</span>
+                    <div class="actions">
+                    </div>
+                </li>
+                <li class="collection-item collection-user user">
+                    <img src="images/default/r.png" class="avatar" alt="AH">
+                    <span class="name">Random 1</span>
+                    <div class="actions">
+                        <a href="#" class="btn-toggle-perm-manage">
+                            <i class="material-icons">star</i></a>
+
+                        <a href="#" class="btn-delete grey-text">
+                            <i class="material-icons">delete</i></a>
+                    </div>
+                </li>
+                <li class="collection-item collection-user user">
+                    <img src="images/default/r.png" class="avatar" alt="AH">
+                    <span class="name">Randome 2</span>
+                    <div class="actions">
+                        <a href="#" class="btn-toggle-perm-manage">
+                            <i class="material-icons">star_border</i></a>
+
+                        <a href="#" class="btn-delete grey-text">
+                            <i class="material-icons">delete</i></a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col col-md-6">
+            <ul class="collection with-header">
+                <li class="collection-header center-align">
+                    <h4>Je suis dans les groupes</h4>
+                </li>
+                <li class="collection-item">
+                    <div>Item #1</div>
+                </li>
+                <li class="collection-item">
+                    <div>Item #2</div>
+                </li>
+                <li class="collection-item">
+                    <div>Item #3</div>
+                </li>
+            </ul>
+        </div>
+        <div class="col col-md-6">
+            <ul class="collection with-header">
+                <li class="collection-header center-align">
+                    <h4>Utilisateurs</h4>
+                </li>
+                <li class="collection-item">
+                    <div>Item #1</div>
+                </li>
+                <li class="collection-item">
+                    <div>Item #2</div>
+                </li>
+                <li class="collection-item">
+                    <div>Item #3</div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<script>
+    var myGroups = [
+        {
+            id: 1,
+            name: 'Un groupe n°1',
+            description: 'Je suis une description',
+            owner_id: 1,
+            users_id: [1, 2, 3]
+        },
+        {
+            id: 2,
+            name: 'Un groupe n°2',
+            owner_id: 1,
+            users_id: [1, 4]
+        },
+        {
+            id: 3,
+            name: 'Le groupe n°3',
+            description: 'Je suis une description autre description'
+            owner_id: 1,
+            users_id: [1]
+        }
+    ];
+
+    var groups = [
+        {
+            id: 4,
+            name: 'Groupe 4 (user 2)',
+            description: 'Je suis une description',
+            owner_id: 2,
+            users_id: [1, 2]
+        },
+        {
+            id: 5,
+            name: 'Groupe 5 (user 2)'
+            owner_id: 2,
+            users_id: [2, 3, 1]
+        },
+        {
+            id: 6,
+            name: 'Groupe 6 (user 3)',
+            description: '',
+            owner_id: 3,
+            users_id: [3, 1]
+        }
+    ]
+
+</script>
+<% script('/js/ignore/groups.js') %>
+<% script('/js/ignore/initGroups.js') %>
+
