Fix sur l'explorateur de fichiers
C'est le deuxième "a" qui doit aussi avoir son ::before de caché (">")

--- a/assets/styles/sass/explorer/explorer.scss
+++ b/assets/styles/sass/explorer/explorer.scss
@@ -9,7 +9,7 @@
 .explorer-navigation {
   @extend .white;
 
-  .breadcrumb:nth-child(1)::before {
+  .nav-wrapper :nth-child(2)::before {
     display: none
   }
 
