--- a/assets/styles/sass/mindmap/mindmap.scss
+++ b/assets/styles/sass/mindmap/mindmap.scss
@@ -331,6 +331,7 @@ color:#2196f3;
 }
 #chatSection {
 	flex:1;
+	position: relative;
 }
 #chatBox {
   cursor: default;
@@ -342,7 +343,10 @@ color:#2196f3;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   width: 300px;
   height:100%;
-  display: none;
+  position:absolute;
+  top:0;
+  bottom:0;
+  display:none;
 }
 
 #chatBoxTitle {
@@ -587,6 +591,6 @@ color:#2196f3;
 .boxCloser {
     cursor: pointer;
     position: absolute;
-    right: 7px;
-    top: 7px;
+    right: 5px;
+    top: 8px;
 }
