--- a/views/mindmap/index.ejs
+++ b/views/mindmap/index.ejs
@@ -22,7 +22,7 @@ blah blah <a>do sth</a>
 		</div>
 		<div id="revBoxStack">
 			<div id="revBoxViewPicker">
-				<button id="revBoxViewPickerAll" class="selected">Tout les noeuds</button><button id="revBoxViewPickerNode">Noeud courrant</button>
+				<button id="revBoxViewPickerAll" class="selected">Tous les noeuds</button><button id="revBoxViewPickerNode">Noeud courrant</button>
 			</div>
 			<ul id="revBoxStackElement">
 
