--- a/views/explorer/index.ejs
+++ b/views/explorer/index.ejs
@@ -24,8 +24,8 @@
 <script>
     var items = [
         {
-            "id": 1,
-            "name": "Ma mindmap avec un nom un peu long quand même ahah xd XDDDDDDD",
+            "id": 4,
+            "name": "Soutenance Projet",
             "path": "/"
         }, {
             "id": 10,
@@ -36,79 +36,19 @@
             "name": "Mindmap de Benji",
             "path": "/Partagées avec moi/Benji/"
         }, {
-            "id": 3,
-            "name": "lorem ipsum",
-            "path": "/Partagées avec moi/Benji/dossier"
-        }, {
-            "id": 312,
-            "name": "Mindmap de AAAAA",
-            "path": "/Partagées avec moi/AAAAA/"
-        }, {
             "id": 4,
             "name": "Une carte mentale",
             "path": "/"
         }, {
             "id": 4,
-            "name": "Une carte mentale",
+            "name": "Demo",
             "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
-            "id": 4,
-            "name": "Une carte mentale",
-            "path": "/"
-        }, {
+        },  {
             "id": 5,
             "name": "Une autre carte mentale",
             "path": "/Dossier 1"
         }, {
-            "id": 6,
-            "name": "Encore une autre carte mentale",
-            "path": "/Dossier 2"
-        }, {
-            "id": 51,
-            "name": "Carte mentale dossier 1",
-            "path": "/Dossier 1"
-        }, {
-            "id": 26,
-            "name": "Carte mentale dossier 3",
-            "path": "/Dossier 3"
-        }, {
-            "path": "Un dossier vide",
+            "path": "Nouveau dossier",
             "special": "empty"
         }
     ];
