--- a/views/layouts/explorer.ejs
+++ b/views/layouts/explorer.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--STYLES-->
     <!--STYLES END-->
+    <%- include ../partials/ga.ejs %>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
 </head>
 <body style="overflow-y:scroll">
