Fix direct link

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -34,13 +34,13 @@
 
             <div class="row" style="margin-bottom: 0">
                 <div class="col-lg-12 center-align">
-                    <a href="http://mindmap.finch4.xyz/auth/google"
+                    <a href="/auth/google"
                        class="btn btn-social btn-social-googleplus waves-effect waves-light">
                         <i class="flaticon-google116 left"></i>&nbsp;Google+</a>
-                    <a href="http://mindmap.finch4.xyz/auth/twitter"
+                    <a href="/auth/twitter"
                        class="btn btn-social btn-social-twitter waves-effect waves-light">
                         <i class="flaticon-twitter20 left"></i>&nbsp;Twitter</a>
-                    <a href="http://mindmap.finch4.xyz/auth/facebook"
+                    <a href="/auth/facebook"
                        class="btn btn-social btn-social-facebook waves-effect waves-light">
                         <i class="flaticon-facebook31 left"></i>&nbsp;Facebook</a>
                 </div>
